force-app/main/default/objects/Territory_Master__c/Territory_Master__c.object-meta.xml
<CustomObject>
    <description>Contains all Territory Information viz., SBU, Territory Name, Territory Owner, etc. based on the ZIP Codes.</description>
    <label>Territory Master</label>
    <nameField>
        <label>Territory Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Master</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>