force-app/main/default/objects/Territory_Master__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <formula>Territory_ID__r.Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area</label>
    <type>Text</type>
</CustomField>