force-app/main/default/objects/Territory_Master__c/fields/Branch_Account__c.field-meta.xml
<CustomField>
    <fullName>Branch_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Branch</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Territory Master</relationshipLabel>
    <relationshipName>Territory_Master</relationshipName>
    <type>Lookup</type>
</CustomField>