force-app/main/default/objects/Territory_Master__c/fields/Branch_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Account_Name__c</fullName>
    <formula>Branch_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Account Name</label>
    <type>Text</type>
</CustomField>