force-app/main/default/objects/Territory_Master__c/fields/Business_Development_Area__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Area__c</fullName>
    <formula>ZIP_Master__r.Business_Dev_Area_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Development Area</label>
    <type>Text</type>
</CustomField>