force-app/main/default/objects/Territory_Master__c/fields/Business_Development_Region__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Region__c</fullName>
    <formula>ZIP_Master__r.Business_Dev_Region_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Development Region</label>
    <type>Text</type>
</CustomField>