force-app/main/default/objects/Territory_Master__c/fields/My_Sales_Team_Zips_2017__c.field-meta.xml
<CustomField>
    <fullName>My_Sales_Team_Zips_2017__c</fullName>
    <formula>IF( 
or(
Territory_ID__r.Territory_OwnerID__c = $User.Id 
,Territory_ID__r.Sales_Manager__c = $User.Id 
,Territory_ID__r.Sales_Director__c = $User.Id 
,Territory_ID__r.Operations_VP__c = $User.Id 
,Territory_ID__r.Sales_EVP__c = $User.Id 
, $Profile.Name = &apos;Integration&apos;
, $Profile.Name = &apos;Sales Operations&apos;
, $Profile.Name = &apos;Salesforce API Only System Integrations&apos;
)
, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Sales Team Zips 2017</label>
    <type>Checkbox</type>
</CustomField>