force-app/main/default/objects/Territory_Master__c/fields/My_Sales_Team_Zips_2018__c.field-meta.xml
<CustomField>
    <fullName>My_Sales_Team_Zips_2018__c</fullName>
    <formula>IF( 
or( 
 Territory_ID_2020__r.Territory_OwnerID__c = $User.Id 
,Territory_ID_2020__r.Sales_Manager__c = $User.Id 
,Territory_ID_2020__r.Sales_Director__c = $User.Id 
,Territory_ID_2020__r.Operations_VP__c = $User.Id 
,Territory_ID_2020__r.Sales_EVP__c = $User.Id 
,Territory_ID_2020__r.temp_Territory_Alignment_Oversite__c = $User.Id 
, $Profile.Name = &apos;Integration&apos;
, $Profile.Name = &apos;Salesforce API Only System Integrations&apos;
, $Profile.Name = &apos;Sales Operations&apos;
) 
, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Sales Team Zips 2018</label>
    <type>Checkbox</type>
</CustomField>