force-app/main/default/objects/Territory_Master__c/fields/New_Territory_Owner_Sales_Ops__c.field-meta.xml
<CustomField>
    <fullName>New_Territory_Owner_Sales_Ops__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used by sales ops to identify TAMs to move to</description>
    <label>New Territory Owner (Sales Ops)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_Master1</relationshipName>
    <type>Lookup</type>
</CustomField>