force-app/main/default/objects/Territory_Master__c/fields/Oil_2017_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Oil_2017_Gallons__c</fullName>
    <label>Oil 2017 Gallons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>