force-app/main/default/objects/Territory_Master__c/fields/Old_Territory_Master_update_date__c.field-meta.xml
<CustomField>
    <fullName>Old_Territory_Master_update_date__c</fullName>
    <description>Set date for owner updates</description>
    <label>Old Territory Master update date</label>
    <type>DateTime</type> 
</CustomField>