force-app/main/default/objects/Territory_Master__c/fields/PSP_Type__c.field-meta.xml
<CustomField>
    <fullName>PSP_Type__c</fullName>
    <formula>Territory_ID__r.PSP_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSP - Type</label>
    <type>Text</type>
</CustomField>