force-app/main/default/objects/Territory_Master__c/fields/Revenue_2017_Oily_Water__c.field-meta.xml
<CustomField>
    <fullName>Revenue_2017_Oily_Water__c</fullName>
    <label>Revenue 2017 Oily Water</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>