force-app/main/default/objects/Territory_Master__c/fields/Sales_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Business_Unit__c</fullName>
    <label>Primary Service Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BPS</fullName>
            </value>
            <value>
                <fullName>CYN</fullName>
            </value>
            <value>
                <fullName>Daylighting Services</fullName>
            </value>
            <value>
                <fullName>DFW</fullName>
            </value>
            <value>
                <fullName>Emerald Services</fullName>
            </value>
            <value>
                <fullName>Field Services</fullName>
            </value>
            <value>
                <fullName>H2O</fullName>
            </value>
            <value>
                <fullName>Healthcare Services</fullName>
            </value>
            <value>
                <fullName>Industrial Services</fullName>
            </value>
            <value>
                <fullName>Lodging</fullName>
            </value>
            <value>
                <fullName>Murphys Oil</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Seismic</fullName>
            </value>
            <value>
                <fullName>Safety-Kleen</fullName>
                <label>SK ENV</label>
            </value>
            <value>
                <fullName>SK KPP</fullName>
            </value>
            <value>
                <fullName>Surface Rentals</fullName>
            </value>
            <value>
                <fullName>Synergy</fullName>
            </value>
            <value>
                <fullName>Technical Services</fullName>
            </value>
            <value>
                <fullName>Thermo Fluids</fullName>
            </value>
			<value>
                <fullName>Thompson</fullName>
            </value>
			<value>
                <fullName>Noble Oil</fullName>
            </value>
            <value>
                <fullName>HEPACO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>