force-app/main/default/objects/Territory_Master__c/fields/Sales_Ops_Tag__c.field-meta.xml
<CustomField>
    <fullName>Sales_Ops_Tag__c</fullName>
    <description>Used for Sales Ops Identification</description>
    <label>Sales Ops Tag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>