force-app/main/default/objects/Territory_Master__c/fields/slsOps_District__c.field-meta.xml
<CustomField>
    <fullName>slsOps_District__c</fullName>
    <formula>ZIP_Master__r.CHES_District__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>slsOps District</label>
    <type>Text</type>
</CustomField>