force-app/main/default/objects/Territory_Master__c/fields/slsOps_Region__c.field-meta.xml
<CustomField>
    <fullName>slsOps_Region__c</fullName>
    <formula>ZIP_Master__r.CHES_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>slsOps Region</label>
    <type>Text</type>
</CustomField>