force-app/main/default/objects/Territory_Master__c/fields/slsOps_temp_flag_FS__c.field-meta.xml
<CustomField>
    <fullName>slsOps_temp_flag_FS__c</fullName>
    <formula>if(  slsOps_temp_Territory__r.slsOps_temp_flag_FS__c  = True, &quot;Open&quot;,  Territory_Owner_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>slsOps temp flag (FS)</label>
    <type>Text</type>
</CustomField>