force-app/main/default/objects/Territory_Master__c/fields/slsOps_temp_FS_Specialist__c.field-meta.xml
<CustomField>
    <fullName>slsOps_temp_FS_Specialist__c</fullName>
    <formula>Territory_ID__r.slsOps_temp_FS_Specialist__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>slsOps temp FS Specialist</label>
    <type>Text</type>
</CustomField>