force-app/main/default/objects/Territory_Master__c/fields/slsOps_temp_Territory__c.field-meta.xml
<CustomField>
    <fullName>slsOps_temp_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>slsOps temp Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Territory Master (slsOps temp Territory (FS))</relationshipLabel>
    <relationshipName>Territory_Master2</relationshipName>
    <type>Lookup</type>
</CustomField>