force-app/main/default/objects/Territory_Master__c/fields/Territory_Branch_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Territory_Branch_Change_Date__c</fullName>
    <label>Territory Branch Change Date</label>
    <type>DateTime</type> 
</CustomField> 