force-app/main/default/objects/Territory_Master__c/fields/Territory_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Territory_Branch_Code__c</fullName>
    <formula>Branch_Account__r.Branch_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Branch code</label>
    <type>Text</type>
</CustomField>