force-app/main/default/objects/Territory_Master__c/fields/Territory_code__c.field-meta.xml
<CustomField>
    <fullName>Territory_code__c</fullName>
    <formula>Territory_ID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory code</label>
    <type>Text</type>
</CustomField>