force-app/main/default/objects/Territory_Master__c/fields/Territory_ID_2020__c.field-meta.xml
<CustomField>
    <fullName>Territory_ID_2020__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Territory ID for 2020</description>
    <label>Territory ID 2020</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Territory Master (Territory ID 2018)</relationshipLabel>
    <relationshipName>Territory_Master</relationshipName>
    <type>Lookup</type>
</CustomField>