force-app/main/default/objects/Territory_Master__c/fields/Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>Territory_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Territory ID lookup field</description>
    <label>Territory ID</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Territory Master (Territory ID)</relationshipLabel>
    <relationshipName>Territory_Master1</relationshipName>
    <type>Lookup</type>
</CustomField>