force-app/main/default/objects/Territory_Master__c/fields/Territory_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Territory_Latitude__c</fullName>
    <formula>ZIP_Master__r.Location__Latitude__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Latitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>