force-app/main/default/objects/Territory_Master__c/fields/Territory_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Territory_Longitude__c</fullName>
    <formula>ZIP_Master__r.Location__Longitude__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Longitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>