force-app/main/default/objects/Territory_Master__c/fields/Territory_Master_HyperLink__c.field-meta.xml
<CustomField>
    <fullName>Territory_Master_HyperLink__c</fullName>
    <formula>HYPERLINK( &quot;/&quot; &amp; CASESAFEID(Id),Name , &quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Master HyperLink</label>
    <type>Text</type>
</CustomField>