force-app/main/default/objects/Territory_Master__c/fields/Territory_Master_ID__c.field-meta.xml
<CustomField>
    <fullName>Territory_Master_ID__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Master ID(18)</label>
    <type>Text</type>
</CustomField>