force-app/main/default/objects/Territory_Master__c/fields/Territory_Master_update_date__c.field-meta.xml
<CustomField>
    <fullName>Territory_Master_update_date__c</fullName>
    <formula>IF(NOT( ISBLANK( Territory_Branch_Change_Date__c ) ), IF(Territory_ID__r.Territory_update_date__c > Territory_Branch_Change_Date__c, Territory_ID__r.Territory_update_date__c, Territory_Branch_Change_Date__c) , IF(Old_Territory_Master_update_date__c > Territory_ID__r.Territory_update_date__c, Old_Territory_Master_update_date__c, Territory_ID__r.Territory_update_date__c) )</formula>
    <label>Territory Master update date</label>
    <type>DateTime</type>
</CustomField>