force-app/main/default/objects/Territory_Master__c/fields/Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Name__c</fullName>
    <formula>Territory_ID__r.Territory_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Name</label>
    <type>Text</type>
</CustomField>