force-app/main/default/objects/Territory_Master__c/fields/Territory_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Territory_Owner_ID__c</fullName>
    <formula>Territory_ID__r.Territory_OwnerID__r.User_ID_18__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Owner ID</label>
    <type>Text</type>
</CustomField>