force-app/main/default/objects/Territory_Master__c/fields/Territory_Owner_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Territory_Owner_Sales_Manager__c</fullName>
    <formula>Territory_ID__r.Sales_Manager__r.Person_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Owner Sales Manager</label>
    <type>Text</type>
</CustomField>