force-app/main/default/objects/Territory_Master__c/fields/Territory_Owner_Sales_Manager_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Territory_Owner_Sales_Manager_ID_18__c</fullName>
    <formula>Territory_ID__r.Sales_Manager__r.User_ID_18__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Owner Sales Manager ID</label>
    <type>Text</type>
</CustomField>