force-app/main/default/objects/Territory_Master__c/fields/Territory_Type__c.field-meta.xml
<CustomField>
    <fullName>Territory_Type__c</fullName>
    <formula>TEXT(Territory_ID__r.Territory_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Type</label>
    <type>Text</type>
</CustomField>