force-app/main/default/objects/Territory_Master__c/fields/TS_Milkrun_Zone__c.field-meta.xml
<CustomField>
    <fullName>TS_Milkrun_Zone__c</fullName>
    <description>TS Milkrun Zone</description>
    <label>TS Milkrun Zone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>