force-app/main/default/objects/Territory_Master__c/fields/Zip_City__c.field-meta.xml
<CustomField>
    <fullName>Zip_City__c</fullName>
    <formula>ZIP_Master__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip City</label>
    <type>Text</type>
</CustomField>