force-app/main/default/objects/Territory_Master__c/fields/ZIP_Code__c.field-meta.xml
<CustomField>
    <fullName>ZIP_Code__c</fullName>
    <formula>ZIP_Master__r.ZIP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZIP Code</label>
    <type>Text</type>
</CustomField>