force-app/main/default/objects/Territory_Master__c/fields/Zip_Country__c.field-meta.xml
<CustomField>
    <fullName>Zip_Country__c</fullName>
    <formula>ZIP_Master__r.Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip Country</label>
    <type>Text</type>
</CustomField>