force-app/main/default/objects/Territory_Master__c/fields/Zip_for_Avention__c.field-meta.xml
<CustomField>
    <fullName>Zip_for_Avention__c</fullName>
    <formula>ZIP_Code__c &amp; &quot;, &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip for Avention</label>
    <type>Text</type>
</CustomField>