force-app/main/default/objects/Territory_Master__c/fields/Zip_FSA__c.field-meta.xml
<CustomField>
    <fullName>Zip_FSA__c</fullName>
    <formula>ZIP_Master__r.Zip_FSA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip FSA</label>
    <type>Text</type>
</CustomField>