force-app/main/default/objects/Territory_Master__c/fields/ZIP_Master__c.field-meta.xml
<CustomField>
    <fullName>ZIP_Master__c</fullName>
    <label>ZIP Master</label>
    <referenceTo>ZIP_Master__c</referenceTo>
    <relationshipLabel>Territory Master</relationshipLabel>
    <relationshipName>Territory_Master</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>