force-app/main/default/objects/Territory_Master__c/fields/zip_slsops_temp_Oil_Gallons__c.field-meta.xml
<CustomField>
    <fullName>zip_slsops_temp_Oil_Gallons__c</fullName>
    <formula>ZIP_Master__r.slsops_temp_Oil_Gallons__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zip slsops temp Oil Gallons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>