force-app/main/default/objects/Territory_Master__c/fields/zip_slsops_temp_Revenue__c.field-meta.xml
<CustomField>
    <fullName>zip_slsops_temp_Revenue__c</fullName>
    <formula>ZIP_Master__r.slsops_temp_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zip slsops temp Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>