force-app/main/default/objects/Territory_Master__c/fields/Zip_State__c.field-meta.xml
<CustomField>
    <fullName>Zip_State__c</fullName>
    <formula>ZIP_Master__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip State</label>
    <type>Text</type>
</CustomField>