force-app/main/default/objects/Territory_Master__c/fields/Zip_tag__c.field-meta.xml
<CustomField>
    <fullName>Zip_tag__c</fullName>
    <formula>ZIP_Master__r.Zip_Tag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip tag</label>
    <type>Text</type>
</CustomField>