force-app/main/default/objects/Territory_Master__c/fields/zold_My_Sales_Team_Zip_Codes__c.field-meta.xml
<CustomField>
    <fullName>zold_My_Sales_Team_Zip_Codes__c</fullName>
    <description>User filtering is the sales manager</description>
    <formula>IF( Territory_ID__r.Sales_Manager__c = $User.Id , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zold_My Sales Team Zip Codes</label>
    <type>Checkbox</type>
</CustomField>