force-app/main/default/objects/Territory_Master__c/fields/zold_My_Sales_Zip_Codes__c.field-meta.xml
<CustomField>
    <fullName>zold_My_Sales_Zip_Codes__c</fullName>
    <description>Sales Zip codes of the territory Owner</description>
    <formula>IF(  Territory_ID__r.Territory_OwnerID__c = $User.Id , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zold_My Sales Zip Codes</label>
    <type>Checkbox</type>
</CustomField>