force-app/main/default/objects/Territory_Master__c/fields/zOld_Territory_Owner__c.field-meta.xml
<CustomField>
    <fullName>zOld_Territory_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>zOld_Territory Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_Master</relationshipName>
    <type>Lookup</type>
</CustomField>