force-app/main/default/objects/Territory_Master__c/listViews/Thermo_Fluids.listView-meta.xml
<ListView>
    <fullName>Thermo_Fluids</fullName>
    <columns>ZIP_Master__c</columns>
    <columns>Branch_Account__c</columns>
    <columns>NAME</columns>
    <columns>Territory_code__c</columns>
    <columns>Sales_Business_Unit__c</columns>
    <columns>zOld_Territory_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Business_Unit__c</field>
        <operation>equals</operation>
        <value>Thermo Fluids</value>
    </filters>
    <filters>
        <field>Territory_ID__c</field>
        <operation>equals</operation>
        <value>Terr-TAM-100-1</value>
    </filters>
    <label>Thermo Fluids</label>
    <language>en_US</language>
</ListView>